--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: "^1.17.0"
+        hugo-version: "latest"
     - name: Build
       run: hugo
     - name: Deploy
