--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,9 +1,10 @@
-name: Build and deploy Hugo site
+name: Deploy to Github Pages
 
 on:
-  push:
-    branches:
-      - main 
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
     build:
@@ -43,8 +44,9 @@ jobs:
 
             - name: Build
               run: hugo --minify --gc
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        deploy_key: ${{ secrets.DEPLOY_KEY }}
-        publish_dir: ./public
+
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                deploy_key: ${{ secrets.DEPLOY_KEY }}
+                publish_dir: ./public
