--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -7,10 +7,10 @@
 #icon = "home"
 #newtab = true
 
-[[social]]
-identifier = "github"
-name = "GitHub"
-url = "https://github.com/open17"
+# [[social]]
+# identifier = "github"
+# name = "GitHub"
+# url = "https://github.com/open17"
 
-[social.params]
-icon = "brand-github"
+# [social.params]
+# icon = "brand-github"
