--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 baseurl = "https://open17.github.io/CpHugo/"
 languageCode = "en-us"
 paginate = 5
-title = "CpHugo"
+title = ">>>>CpHugo<<<<"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
